# clings

./: .gitignore  CMakeLists.txt  README.md  info.yml  main.c  vcpkg.json
katas/: compilation_error.c  run_error.c  success.c  test_error.c
src/: clings.c  clings.h
src/execution/: execution.c  execution.h
src/katas/: katas.c  katas.h
src/result_handler/: result_handler.c  result_handler.h
src/types/: sized_string.c  types.h
src/yaml/: CMakeLists.txt  yaml_parser_factory.c  yaml_parser_factory.h  yaml_test.c  yml.c  yml.h
